after add some changes in html and add comments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <section class="one"><h3>Welcome to my web page i am Sleem Hashem</h3></section>
-    <section class="two">section two</section>
-    <section class="three">
+    <section class="two"><h3>section two</h3> </section>
+     <section class="three"><!--this is the section if you close from you will increse the data width  -->
         <div class="skills">
         <h3>HTML</h3>
         <div class="progress">
@@ -25,7 +25,7 @@
         </div>
     </div>
     </section>
-    <section class="four">section four</section>
+    <section class="four"><h3>section four</h3> </section>
     <script src="main.js"></script>
 </body>
 </html>
